# gb-synth

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  gb-synth.cabal
.github/workflows/: ci.yml  publish.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: gb-synth-0.1.0.0-inplace.conf  package.cache
src/GBSynth/: Chord.hs  Effects.hs  Envelope.hs  Instrument.hs  Oscillator.hs  Pattern.hs  Render.hs  SFX.hs  Song.hs  Synthesis.hs  WAV.hs
test/: Main.hs
