cabal-version: 2.4
name:          gb-synth
version:       0.1.0.0
synopsis:      Procedural music sequencer for GB games
description:
  A synthesis engine with tracker-style song DSL for generating
  retro game music and sound effects. Pure Haskell — no audio files,
  no samples, no DAW. Just math.
  .
  Define songs declaratively with chords, patterns, sections, and
  instruments. Render to 16-bit mono PCM WAV at 22050 Hz.

license:       MIT
license-file:  LICENSE
author:        Gondola Bros Entertainment
maintainer:    gondola.bros.entertainment@gmail.com
category:      Sound
build-type:    Simple

library
  exposed-modules:
    GBSynth.Envelope
    GBSynth.Instrument
    GBSynth.Oscillator
    GBSynth.Pattern
    GBSynth.Render
    GBSynth.Song
    GBSynth.WAV

  hs-source-dirs:  src
  build-depends:
    base        >=4.18 && <5,
    bytestring  >=0.11 && <0.13,
    containers  >=0.6  && <0.8

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -O2
  default-extensions:
    BangPatterns
