cabal-version: 2.4
name:          gb-synth
version:       0.1.0.0
synopsis:      Procedural music sequencer for GB games
description:
  A synthesis engine with tracker-style song DSL for generating
  retro game music and sound effects. Pure Haskell — no audio files,
  no samples, no DAW. Just math.
  .
  Define songs declaratively with chords, patterns, sections, and
  instruments. Render to 16-bit mono PCM WAV at 22050 Hz.

license:       MIT
license-file:  LICENSE
author:        Gondola Bros Entertainment
maintainer:    gondola.bros.entertainment@gmail.com
category:      Sound
build-type:    Simple
tested-with:   GHC ==9.6.7
extra-doc-files: README.md
homepage:      https://github.com/Gondola-Bros-Entertainment/gb-synth
bug-reports:   https://github.com/Gondola-Bros-Entertainment/gb-synth/issues

source-repository head
  type:     git
  location: https://github.com/Gondola-Bros-Entertainment/gb-synth.git

library
  exposed-modules:
    GBSynth.Envelope
    GBSynth.Instrument
    GBSynth.Oscillator
    GBSynth.Pattern
    GBSynth.Render
    GBSynth.Song
    GBSynth.Synthesis
    GBSynth.WAV

  hs-source-dirs:  src
  build-depends:
    base        >=4.18 && <5,
    bytestring  >=0.11 && <0.13,
    containers  >=0.6  && <0.8

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -O2
  default-extensions:
    BangPatterns

test-suite gb-synth-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base        >=4.18 && <5,
    bytestring  >=0.11 && <0.13,
    gb-synth

  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -O2
  default-extensions:
    BangPatterns
